updated some table styling

--- a/zwpa_app/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/zwpa_app/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1286,8 +1286,8 @@ $table-border-size: 1px;
 // $table-head-padding: rem-calc(8 10 10);
 
 // These control the row padding and font styles
-// $table-row-padding: rem-calc(9 10);
-// $table-row-font-size: rem-calc(14);
+ $table-row-padding: rem-calc(14 14);
+ $table-row-font-size: rem-calc(14);
 // $table-row-font-color: $jet;
 // $table-line-height: rem-calc(18);
 
