--- a/zwpa_app/app/views/walkthroughs/_form.html.erb
+++ b/zwpa_app/app/views/walkthroughs/_form.html.erb
@@ -19,9 +19,9 @@
       <%= f.hidden_field :request_id %><br>
     </div>
 
-  <label> Date of Walkthrough </label><br>
-    <%#= f.date_select :created_at %>
-    <%= f.input :created_at, as: :string, input_html: { class: 'datepicker' } %>
+
+    <%= f.input :created_at, as: :string, input_html: { class: 'datepicker', placeholder: "Enter date"}, label: "Date of Walkthrough" %>
+
 
 
     <div class="row">
