updated show page with date on walkthroughs

--- a/zwpa_app/app/views/walkthroughs/show.html.erb
+++ b/zwpa_app/app/views/walkthroughs/show.html.erb
@@ -1,304 +1,308 @@
-<p id="notice"><%= notice %></p>
+<div class="small-12 columns">
 
-<h1>Walkthrough</h1>
-<fieldset>
-  <legend></legend>
-<p>
-  <strong>Customer:</strong>
-  <%= @walkthrough.request.customer.company_name %>
-</p>
+  <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Square footage:</strong>
-  <%= @walkthrough.square_footage %>
-</p>
+  <h1>Walkthrough</h1><%=@walkthrough.created_at %>
+  <fieldset>
+    <legend></legend>
+  <p>
+    <strong>Client:</strong>
+    <%= @walkthrough.request.customer.company_name %>
+  </p>
 
-<p>
-  <strong>Num floors:</strong>
-  <%= @walkthrough.num_floors %>
-</p>
+  <p>
+    <strong>Square footage:</strong>
+    <%= @walkthrough.square_footage %>
+  </p>
 
-<p>
-  <strong>Max occupancy:</strong>
-  <%= @walkthrough.max_occupancy %>
-</p>
+  <p>
+    <strong>Num floors:</strong>
+    <%= @walkthrough.num_floors %>
+  </p>
 
-<p>
-  <strong>Are there other spaces/businesses (Leased or Owned/Operated) in the building?</strong>
-  <%= @walkthrough.other_businesses %>
-</p>
+  <p>
+    <strong>Max occupancy:</strong>
+    <%= @walkthrough.max_occupancy %>
+  </p>
 
-
-<p>
-  <w1>
-    <strong>If yes, what type of business/spaces? (i.e. coffee shop, bar, restaurant, gift shop, business center): </strong>
-    <%= @walkthrough.other_businesses_type %>
-  </w1>
-</p>
+  <p>
+    <strong>Are there other spaces/businesses (Leased or Owned/Operated) in the building?</strong>
+    <%= @walkthrough.other_businesses %>
+  </p>
 
 
-<p>
-  <strong>Is your building owned or leased?</strong>
-  <%= @walkthrough.ownership %>
-</p>
-
-<p>
-  <w1>
-    <strong>If leased, does the leasing agent control the solid waste/recycling disposal contract?</strong>
-    <%= @walkthrough.waste_disposal_contract %>
-  </w1>
-</p>
-
-<p>
-  <w1>
-    <strong>If leased, are waste management costs included in the rent payment?</strong>
-    <%= @walkthrough.waste_management_cost %>
-  </w1>
-</p>
-</fieldset>
-
-<!-- ///////////////////////////  FIELDSET  /////////////////////////////-->
-<fieldset>
-  <legend></legend>
-
-<p>
-  <strong>Does your building have a </strong>
-</p>
-
-<p>
-  <w1>
-    <strong>Loading dock:</strong>
-    <%= @walkthrough.loading_dock %>
-  </w1>
-</p>
-
-<p>
-  <w1>
-    <strong>Freight elevators?</strong>
-    <%= @walkthrough.freight_elevators %>
-  </w1>
-</p>
-
-<p>
-  <w1>
-    <strong>Ample storage space?</strong>
-    <%= @walkthrough.storage_space %>
-  </w1>
-</p>
-
-<p>
-  <w2>
-    <strong>Please explain.</strong>
-    <%= @walkthrough.storage_space_details %>
-  </w2>
-</p>
-
-<p>
-  <strong>Current trash hauler:</strong>
-  <%= @walkthrough.trash_hauler %>
-</p>
-
-<p>
-  <strong>Do you have a contract with them?</strong>
-  <%= @walkthrough.trash_hauler_contract %>
-</p>
-
-<p>
-  <w1>
-    <strong>If yes, is a copy available?</strong>
-    <%= @walkthrough.contract_available %>
-  </w1>
-</p>
-
-<p>
-  <strong>Do you have at least one year’s records of solid waste and/or recycling volumes?</strong>
-  <%= @walkthrough.annual_record %>
-</p>
-
-<p>
-  <strong>Where is solid waste currently stored?</strong>
-  <%= @walkthrough.waste_storage %>
-</p>
-
-<p>
-  <strong>What solid waste containers do you use?</strong>
-  <%= @walkthrough.waste_containers %>
-</p>
-</fieldset>
-<!-- ///////////////////////////  FIELDSET  /////////////////////////////-->
-
-<fieldset>
-  <legend></legend>
-<p>
-  <strong>Does your company have a “Buy recycled” policy re recyclability or recycled content of products?</strong>
-  <%= @walkthrough.buy_recycled %>
-</p>
-
-<p><w1>
-  <strong>If yes, please describe:</strong>
-  <%= @walkthrough.buy_recycled_details %>
-</w1></p>
-
-<p>
-  <strong>Does your company have a policy of purchasing non-toxic/“Green” cleaning products?</strong>
-  <%= @walkthrough.green_cleaning_products %>
-</p>
-
-<p><w1>
-  <strong>If yes, please describe:</strong>
-  <%= @walkthrough.green_cleaning_details %>
-</w1></p>
-
-<p>
-  <strong>Is your building located in a recycling mandated community?</strong>
-  <%= @walkthrough.mandated_recycling %>
-</p>
-
-<p>
-  <strong>Does your building currently have a recycling program?</strong>
-  <%= @walkthrough.recycling_program %>
-</p>
-
-<p><w1>
-  <strong>If yes, describe your current recycling system and material collected for recycling (e.g. “We collect office paper in 90 gallon toters”).</strong>
-  <%= @walkthrough.recycling_details %>
-</w1></p>
-
-<p>
-  <strong>Does your building currently utilize a duel-stream or single-stream recycling program in your building?</strong>
-  <%= @walkthrough.recycling_stream %>
-</p>
-
-<p><w1>
-  <strong>Details (For example: “We collect white office and mixed paper in separate 90 gallon toters”):</strong>
-  <%= @walkthrough.recycling_stream_details %>
-</w1></p>
-
-<p>
-  <strong>If your company was recycling, and discontinued the effort, please explain why.</strong>
-  <%= @walkthrough.discontinued_recycling %>
-</p>
-
-<p>
-  <strong>Does your company currently compost organic materials such as food waste/yard waste?</strong>
-  <%= @walkthrough.current_compost %>
-</p>
-
-<p>
-  <strong>Has your organization composted organic material in the past?</strong>
-  <%= @walkthrough.past_compost %>
-</p>
-</fieldset>
-
-<table>
-  <h2>E-wastes</h2>
-  <thead>
-    <tr>
-      <th></th>
-      <th>Generate</th>
-      <th>Recycle</th>
-    </tr>
-  </thead>
-
-  <tbody>
-        <tr>
-          <td>Toner/Ink Cartridges</td>
-          <td><%= @walkthrough.generate_toner_ink %></td>
-          <td><%= @walkthrough.recycle_toner_ink %></td>        
-        </tr>
-        <tr>
-          <td>CFLs/Fluorescent tubes</td>
-          <td><%= @walkthrough.generate_CFLs %></td>
-          <td><%= @walkthrough.recycle_CFLs %></td>        
-        </tr>
-        <tr>
-          <td>Batteries</td>
-          <td><%= @walkthrough.generate_batteries %></td>
-          <td><%= @walkthrough.recycle_batteries %></td>          
-        </tr>
-        <tr>
-          <td>Computers, Peripherals</td>
-          <td><%= @walkthrough.generate_computers %></td>
-          <td><%= @walkthrough.recycle_computers %></td>        
-        </tr>
-        <tr>
-          <td>Cell Phones</td>
-          <td><%= @walkthrough.generate_cellphones %></td>
-          <td><%= @walkthrough.recycle_cellphones %></td>        
-        </tr>
-        <tr>
-          <td>TVs</td>
-          <td><%= @walkthrough.generate_tvs %></td>
-          <td><%= @walkthrough.recycle_tvs %></td>        
-        </tr>
-        <tr>
-          <td>Other Corded Equipment</td>
-          <td><%= @walkthrough.generate_other_corded_equipment %></td>
-          <td><%= @walkthrough.recycle_other_corded_equipment %></td>        
-        </tr>
-  </tbody>
-</table>
-  <p>(Other Corded Equip can be Vacuum Cleaner, lamps, coffee machine, etc.)</p>
+  <p>
+    <w1>
+      <strong>If yes, what type of business/spaces? (i.e. coffee shop, bar, restaurant, gift shop, business center): </strong>
+      <%= @walkthrough.other_businesses_type %>
+    </w1>
+  </p>
 
 
+  <p>
+    <strong>Is your building owned or leased?</strong>
+    <%= @walkthrough.ownership %>
+  </p>
 
-<table>
-  <h2>Other Materials</h2>
-  <thead>
-    <tr>
-      <th></th>
-      <th>Generate</th>
-      <th>Recycle</th>
-    </tr>
-  </thead>
+  <p>
+    <w1>
+      <strong>If leased, does the leasing agent control the solid waste/recycling disposal contract?</strong>
+      <%= @walkthrough.waste_disposal_contract %>
+    </w1>
+  </p>
 
-  <tbody>
-        <tr>
-          <td>Furniture</td>
-          <td><%= @walkthrough.generate_furniture %></td>
-          <td><%= @walkthrough.recycle_furniture %></td>        
-        </tr>
-        <tr>
-          <td>Linens/Uniforms</td>
-          <td><%= @walkthrough.generate_linens_uniforms %></td>
-          <td><%= @walkthrough.recycle_linens_uniforms %></td>        
-        </tr>
-        <tr>
-          <td>Construction Debris</td>
-          <td><%= @walkthrough.generate_construction_debris %></td>
-          <td><%= @walkthrough.recycle_construction_debris %></td>          
-        </tr>
-        <tr>
-          <td>Pallets</td>
-          <td><%= @walkthrough.generate_pallets %></td>
-          <td><%= @walkthrough.recycle_pallets %></td>        
-        </tr>
-  </tbody>
-</table>
+  <p>
+    <w1>
+      <strong>If leased, are waste management costs included in the rent payment?</strong>
+      <%= @walkthrough.waste_management_cost %>
+    </w1>
+  </p>
+  </fieldset>
 
-<!-- ///////////////////////////  FIELDSET  /////////////////////////////-->
+  <!-- ///////////////////////////  FIELDSET  /////////////////////////////-->
+  <fieldset>
+    <legend></legend>
 
-<fieldset><legend></legend>
-<p>
-  <strong>Does your company currently have a Zero Waste Policy in place? This would require 90% of overall diversion of landfill for non-hazardous wastes discarded materials are reused, reused, recycled, composted, or recovered for productive use in nature or the economy at biological temperatures.</strong>
-  <%= @walkthrough.ZW_policy %>
-</p>
+  <p>
+    <strong>Does your building have a </strong>
+  </p>
 
-<p>
-  <strong>Is your building/organization LEED Certified?</strong>
-  <%= @walkthrough.LEED %>
-</p>
+  <p>
+    <w1>
+      <strong>Loading dock:</strong>
+      <%= @walkthrough.loading_dock %>
+    </w1>
+  </p>
 
-<p><w1>
-  <strong>If so, is your building/organization looking to recertify your LEED building?</strong>
-  <%= @walkthrough.recertify_LEED %>
-</w1></p>
+  <p>
+    <w1>
+      <strong>Freight elevators?</strong>
+      <%= @walkthrough.freight_elevators %>
+    </w1>
+  </p>
 
-<p>
-  <strong>Is your building requesting PRC for waste audit services?</strong>
-  <%= @walkthrough.requesting_audit_services %>
-</p>
-</fieldset>
-<%= link_to 'Edit', edit_walkthrough_path(@walkthrough), class: 'button' %> |
-<%= link_to 'Back to Request', request_path(@walkthrough.request), class: 'button' %> |
-<%= link_to 'Back', walkthroughs_path, class: 'button' %>
+  <p>
+    <w1>
+      <strong>Ample storage space?</strong>
+      <%= @walkthrough.storage_space %>
+    </w1>
+  </p>
+
+  <p>
+    <w2>
+      <strong>Please explain.</strong>
+      <%= @walkthrough.storage_space_details %>
+    </w2>
+  </p>
+
+  <p>
+    <strong>Current trash hauler:</strong>
+    <%= @walkthrough.trash_hauler %>
+  </p>
+
+  <p>
+    <strong>Do you have a contract with them?</strong>
+    <%= @walkthrough.trash_hauler_contract %>
+  </p>
+
+  <p>
+    <w1>
+      <strong>If yes, is a copy available?</strong>
+      <%= @walkthrough.contract_available %>
+    </w1>
+  </p>
+
+  <p>
+    <strong>Do you have at least one year’s records of solid waste and/or recycling volumes?</strong>
+    <%= @walkthrough.annual_record %>
+  </p>
+
+  <p>
+    <strong>Where is solid waste currently stored?</strong>
+    <%= @walkthrough.waste_storage %>
+  </p>
+
+  <p>
+    <strong>What solid waste containers do you use?</strong>
+    <%= @walkthrough.waste_containers %>
+  </p>
+  </fieldset>
+  <!-- ///////////////////////////  FIELDSET  /////////////////////////////-->
+
+  <fieldset>
+    <legend></legend>
+  <p>
+    <strong>Does your company have a “Buy recycled” policy re recyclability or recycled content of products?</strong>
+    <%= @walkthrough.buy_recycled %>
+  </p>
+
+  <p><w1>
+    <strong>If yes, please describe:</strong>
+    <%= @walkthrough.buy_recycled_details %>
+  </w1></p>
+
+  <p>
+    <strong>Does your company have a policy of purchasing non-toxic/“Green” cleaning products?</strong>
+    <%= @walkthrough.green_cleaning_products %>
+  </p>
+
+  <p><w1>
+    <strong>If yes, please describe:</strong>
+    <%= @walkthrough.green_cleaning_details %>
+  </w1></p>
+
+  <p>
+    <strong>Is your building located in a recycling mandated community?</strong>
+    <%= @walkthrough.mandated_recycling %>
+  </p>
+
+  <p>
+    <strong>Does your building currently have a recycling program?</strong>
+    <%= @walkthrough.recycling_program %>
+  </p>
+
+  <p><w1>
+    <strong>If yes, describe your current recycling system and material collected for recycling (e.g. “We collect office paper in 90 gallon toters”).</strong>
+    <%= @walkthrough.recycling_details %>
+  </w1></p>
+
+  <p>
+    <strong>Does your building currently utilize a duel-stream or single-stream recycling program in your building?</strong>
+    <%= @walkthrough.recycling_stream %>
+  </p>
+
+  <p><w1>
+    <strong>Details (For example: “We collect white office and mixed paper in separate 90 gallon toters”):</strong>
+    <%= @walkthrough.recycling_stream_details %>
+  </w1></p>
+
+  <p>
+    <strong>If your company was recycling, and discontinued the effort, please explain why.</strong>
+    <%= @walkthrough.discontinued_recycling %>
+  </p>
+
+  <p>
+    <strong>Does your company currently compost organic materials such as food waste/yard waste?</strong>
+    <%= @walkthrough.current_compost %>
+  </p>
+
+  <p>
+    <strong>Has your organization composted organic material in the past?</strong>
+    <%= @walkthrough.past_compost %>
+  </p>
+  </fieldset>
+
+  <table>
+    <h2>E-wastes</h2>
+    <thead>
+      <tr>
+        <th></th>
+        <th>Generate</th>
+        <th>Recycle</th>
+      </tr>
+    </thead>
+
+    <tbody>
+          <tr>
+            <td>Toner/Ink Cartridges</td>
+            <td><%= @walkthrough.generate_toner_ink %></td>
+            <td><%= @walkthrough.recycle_toner_ink %></td>        
+          </tr>
+          <tr>
+            <td>CFLs/Fluorescent tubes</td>
+            <td><%= @walkthrough.generate_CFLs %></td>
+            <td><%= @walkthrough.recycle_CFLs %></td>        
+          </tr>
+          <tr>
+            <td>Batteries</td>
+            <td><%= @walkthrough.generate_batteries %></td>
+            <td><%= @walkthrough.recycle_batteries %></td>          
+          </tr>
+          <tr>
+            <td>Computers, Peripherals</td>
+            <td><%= @walkthrough.generate_computers %></td>
+            <td><%= @walkthrough.recycle_computers %></td>        
+          </tr>
+          <tr>
+            <td>Cell Phones</td>
+            <td><%= @walkthrough.generate_cellphones %></td>
+            <td><%= @walkthrough.recycle_cellphones %></td>        
+          </tr>
+          <tr>
+            <td>TVs</td>
+            <td><%= @walkthrough.generate_tvs %></td>
+            <td><%= @walkthrough.recycle_tvs %></td>        
+          </tr>
+          <tr>
+            <td>Other Corded Equipment</td>
+            <td><%= @walkthrough.generate_other_corded_equipment %></td>
+            <td><%= @walkthrough.recycle_other_corded_equipment %></td>        
+          </tr>
+    </tbody>
+  </table>
+    <p>(Other Corded Equip can be Vacuum Cleaner, lamps, coffee machine, etc.)</p>
+
+
+
+  <table>
+    <h2>Other Materials</h2>
+    <thead>
+      <tr>
+        <th></th>
+        <th>Generate</th>
+        <th>Recycle</th>
+      </tr>
+    </thead>
+
+    <tbody>
+          <tr>
+            <td>Furniture</td>
+            <td><%= @walkthrough.generate_furniture %></td>
+            <td><%= @walkthrough.recycle_furniture %></td>        
+          </tr>
+          <tr>
+            <td>Linens/Uniforms</td>
+            <td><%= @walkthrough.generate_linens_uniforms %></td>
+            <td><%= @walkthrough.recycle_linens_uniforms %></td>        
+          </tr>
+          <tr>
+            <td>Construction Debris</td>
+            <td><%= @walkthrough.generate_construction_debris %></td>
+            <td><%= @walkthrough.recycle_construction_debris %></td>          
+          </tr>
+          <tr>
+            <td>Pallets</td>
+            <td><%= @walkthrough.generate_pallets %></td>
+            <td><%= @walkthrough.recycle_pallets %></td>        
+          </tr>
+    </tbody>
+  </table>
+
+  <!-- ///////////////////////////  FIELDSET  /////////////////////////////-->
+
+  <fieldset><legend></legend>
+  <p>
+    <strong>Does your company currently have a Zero Waste Policy in place? This would require 90% of overall diversion of landfill for non-hazardous wastes discarded materials are reused, reused, recycled, composted, or recovered for productive use in nature or the economy at biological temperatures.</strong>
+    <%= @walkthrough.ZW_policy %>
+  </p>
+
+  <p>
+    <strong>Is your building/organization LEED Certified?</strong>
+    <%= @walkthrough.LEED %>
+  </p>
+
+  <p><w1>
+    <strong>If so, is your building/organization looking to recertify your LEED building?</strong>
+    <%= @walkthrough.recertify_LEED %>
+  </w1></p>
+
+  <p>
+    <strong>Is your building requesting PRC for waste audit services?</strong>
+    <%= @walkthrough.requesting_audit_services %>
+  </p>
+  </fieldset>
+  <%= link_to 'Edit', edit_walkthrough_path(@walkthrough), class: 'button' %> 
+  <%= link_to 'Back to Request', request_path(@walkthrough.request), class: 'button' %> 
+  <%= link_to 'Back', walkthroughs_path, class: 'button' %>
+
+</div>
