added date to walkthrough show page

--- a/zwpa_app/app/views/walkthroughs/show.html.erb
+++ b/zwpa_app/app/views/walkthroughs/show.html.erb
@@ -2,7 +2,7 @@
 
   <p id="notice"><%= notice %></p>
 
-  <h1>Walkthrough</h1><%=@walkthrough.created_at %>
+  <h1><%="Walkthrough - " + @walkthrough.created_at.strftime('%b %e, %Y') %> </h1>
   <fieldset>
     <legend></legend>
   <p>
