changed company to client in approproiate places for requests and company views

--- a/zwpa_app/app/views/customers/_all_customers.html.erb
+++ b/zwpa_app/app/views/customers/_all_customers.html.erb
@@ -1,7 +1,7 @@
 <table>
   <thead>
     <tr>
-      <th>Company name</th>
+      <th>Client name</th>
       <th>Latest Request</th>
       <th></th>
      
