--- a/zwpa_app/app/views/customers/show.html.erb
+++ b/zwpa_app/app/views/customers/show.html.erb
@@ -2,7 +2,7 @@
 
 <div class="small-12 columns">
 	<h1 class="button-head"><%=@customer.company_name%></h1>
-	<div class="add_button"><%= link_to 'Update Customer', edit_customer_path(@customer), class: 'button tiny left ' %></div>
+	<div class="add_button"><%= link_to 'Update Client', edit_customer_path(@customer), class: 'button tiny left ' %></div>
 </div>
 
 
