--- a/zwpa_app/app/views/customers/_form.html.erb
+++ b/zwpa_app/app/views/customers/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@customer) do |f| %>
   <% if @customer.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@customer.errors.count, "error") %> prohibited this customer from being saved:</h2>
+      <h2><%= pluralize(@customer.errors.count, "error") %> prohibited this client from being saved:</h2>
 
       <ul>
       <% @customer.errors.full_messages.each do |msg| %>
@@ -16,6 +16,6 @@
     <%= f.text_field :company_name %>
   </div>
   <div class="actions">
-    <%= f.submit "Add Customer", class: 'button small' %>
+    <%= f.submit "Add Client", class: 'button small' %>
   </div>
 <% end %>
