--- a/zwpa_app/app/views/customers/edit.html.erb
+++ b/zwpa_app/app/views/customers/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing customer</h1>
+<h1><%= "Editing Client, " + @customer.company_name%></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @customer %> |
-<%= link_to 'Back', customers_path %>
+<%= link_to 'Back', @customer, class: "button" %> 
+<%= link_to 'All Clients', customers_path, class: "button"  %>
