--- a/zwpa_app/app/views/requests/_all_requests.html.erb
+++ b/zwpa_app/app/views/requests/_all_requests.html.erb
@@ -1,7 +1,7 @@
 <table>
   <thead>
     <tr>
-      <th>Customer</th>
+      <th>Client</th>
       <th>Date Initiated</th>
       <th>Contact</th>
       <th></th>
