--- a/zwpa_app/app/views/notes/show.html.erb
+++ b/zwpa_app/app/views/notes/show.html.erb
@@ -7,11 +7,13 @@
 	</p>
 	 -->
 
-
+	 
 
 		<p>
+		  <%if @note.image.exists?%>
+      			<%= image_tag @note.image.url(:large) %></br>
+      		<%end%>
 		  
-		  <%= image_tag @note.image.url(:large) %>
 		</p>
 
 		<p>
