--- a/zwpa_app/app/views/requests/_form.html.erb
+++ b/zwpa_app/app/views/requests/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@request) do |f| %>
+<%= simple_form_for(@request) do |f| %>
   <% if @request.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@request.errors.count, "error") %> prohibited this request from being saved:</h2>
@@ -45,7 +45,8 @@
   </div>
   <div class="field">
     <%= f.label :date %><br>
-    <%= f.date_select :date %>
+    <%#= f.date_select :date %>
+    <%= f.input :date, as: :string, input_html: { class: 'datepicker', placeholder: "Enter date"}, label: false %>
   </div>
 
   <%#= render 'note_form' %>
