Fixed formatting on the home page

--- a/zwpa_app/app/views/home/_recent_requests.html.erb
+++ b/zwpa_app/app/views/home/_recent_requests.html.erb
@@ -1,7 +1,7 @@
 <table class="table">
   <tr>
-    <th width="200">Client</th>
-    <th width="120">Start Date</th>
+    <th>Client</th>
+    <th>Start Date</th>
     <th></th>
   </tr>
 
