added zip code to request form and show page, added zip code to request controller params, fixed broken update link on request show page

--- a/zwpa_app/app/views/requests/_form.html.erb
+++ b/zwpa_app/app/views/requests/_form.html.erb
@@ -44,6 +44,10 @@
     <%= f.text_field :city %>
   </div>
   <div class="field">
+    <%= f.label :zip_code %><br>
+    <%= f.text_field :zip_code %>
+  </div>
+  <div class="field">
     <%= f.label :date %><br>
     <%= f.date_select :date %>
   </div>
