moved the request contact title to the end of the contact name

--- a/zwpa_app/app/views/requests/_request_details.html.erb
+++ b/zwpa_app/app/views/requests/_request_details.html.erb
@@ -11,7 +11,7 @@
 
   <p>
     <strong>Contact Name:</strong>
-    <%= @request.title + @request.name %>
+    <%= @request.name + " (" + @request.title + ")" %>
   </p>
 
   <p>
