--- a/zwpa_app/app/views/audits/show.html.erb
+++ b/zwpa_app/app/views/audits/show.html.erb
@@ -11,18 +11,13 @@
 </p>
 
 <p>
-  <strong>Origin:</strong>
-  <%= @audit.origin %>
-</p>
-
-<p>
   <strong>Time period:</strong>
   <%= @audit.time_period %>
 </p>
 
 <p>
-  <strong>Dumpster type:</strong>
-  <%= @audit.dumpster_type %>
+  <strong>Generator:</strong>
+  <%= @audit.generator %>
 </p>
 
 <%= link_to 'Edit', edit_audit_path(@audit) %> |
