removed search and added audits in nav

--- a/zwpa_app/app/views/partials/_nav.html.erb
+++ b/zwpa_app/app/views/partials/_nav.html.erb
@@ -13,9 +13,9 @@
       <section class="top-bar-section">
         <!-- Right Nav Section -->
         <ul class="right">
-          <li><%= link_to 'Requests', requests_path %></li>
           <li><%= link_to 'Clients', customers_path %></li>
-          <li><a href="#">Search</a></li>
+          <li><%= link_to 'Requests', requests_path %></li>
+          <li><%= link_to 'Audits', audits_path %></li>
           <li><a href="#">Help</a></li>
         </ul>
 
