added js to make nav bar shrink

--- a/zwpa_app/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/zwpa_app/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1368,7 +1368,7 @@ $topbar-bg-color: rgba(0,0,0,0);
 $topbar-bg: rgba(0,0,0,0);
 
 // Height and margin
- $topbar-height: 60px;
+ //$topbar-height: 60px;
 // $topbar-margin-bottom: 0;
 
 // Controlling the styles for the title in the top bar
