--- a/zwpa_app/app/assets/stylesheets/custom.scss
+++ b/zwpa_app/app/assets/stylesheets/custom.scss
@@ -6,7 +6,15 @@
 	background-color: rgba(15,52,15, .7);
 	-webkit-box-shadow: 0 0 5px 0 rgba(0,0,0,0.4);
 	box-shadow: 0 0 5px 0 rgba(0,0,0,0.4);
-	transition: all 0.5s ease 0.1s;
 	
-
 }
+
+.top-bar{
+	height: 55px;
+	transition: all 0.5s ease 0.1s;
+	padding-top:5px;
+}
+
+
+
+
