can now create waste and on audit show page. returns to audit show page if successfully created

--- a/zwpa_app/app/views/wastes/_form.html.erb
+++ b/zwpa_app/app/views/wastes/_form.html.erb
@@ -12,8 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :audit_id %><br>
-    <%= f.number_field :audit_id %>
+    <%= f.hidden_field :audit_id %>
   </div>
   <div class="field">
     <%= f.label :material_type %><br>
