started making bottom buttons

--- a/zwpa_app/app/assets/stylesheets/custom.scss
+++ b/zwpa_app/app/assets/stylesheets/custom.scss
@@ -9,24 +9,35 @@
 	
 }
 
-.top-bar{
+
+//used to style nav bar size change in application.js
+.top-margin{
 	height: 55px;
 	transition: all 0.5s ease 0.1s;
 	padding-top:5px;
 }
 
 .bottom-bar {
-  
-  color: #FFFFFF;
+  color:white;
   background-color: rgba(15,52,15, .7);
 	-webkit-box-shadow: 0 0 5px 0 rgba(0,0,0,0.4);
 	box-shadow: 0 0 5px 0 rgba(0,0,0,0.4);
 }
 
 .fixed-bottom {
+	
   width: 100%;
   left: 0;
   position: fixed;
   bottom: 0;
   z-index: 99;
 }
+
+.bottom-button{
+	display:inline-block;
+	width:49%;
+	background-color: RED;
+	text-align:center;
+}
+
+
