--- a/zwpa_app/app/views/walkthroughs/_bottom_bar.html.erb
+++ b/zwpa_app/app/views/walkthroughs/_bottom_bar.html.erb
@@ -1,4 +1,4 @@
-  <div class="fixed-bottom contain-to-grid show-for-medium-down">
+  <div class="fixed-bottom  show-for-medium-down">
     <nav class="top-bar bottom-bar" >
     	<section class="top-bar-section">
     		<div class="bottom-button">
