audit form worksgit add app/views/audits/new.html.erbgit add app/views/audits/new.html.erbgit add app/views/audits/new.html.erbgit add app/views/audits/new.html.erb! nested forms workgit add app/views/audits/new.html.erbgit add app/views/audits/new.html.erb need to figure out js for add a item link

--- a/zwpa_app/app/views/audits/_form.html.erb
+++ b/zwpa_app/app/views/audits/_form.html.erb
@@ -17,7 +17,7 @@
         <fieldset>
           <legend><%= controller.action_name.capitalize %> Audit</legend>
          
-           <%= audit_form.input :request_id, input_html: {value: @req_id} %>           
+           <%= audit_form.hidden_field :request_id, input_html: {value: @req_id} %>           
            <%= audit_form.date_select :date %>
            <%= audit_form.label :generator %><br>
            <%= audit_form.input :generator, :collection => ['Landfill', 'Recycle', 'Compost'], :as => :radio_buttons, label: '' %>
